@@ -1328,7 +1328,26 @@ B
 A or B
 } \\
 \hline
+\endfirsthead
+\hline
+\multicolumn{2}{|l|}{\textbf{
+Inputs
+}} & \textbf{
+Output
+} \\
+\hline
+\textbf{
+A
+} & \textbf{
+B
+} & \textbf{
+A or B
+} \\
+\hline
 \endhead
+\multicolumn{3}{c}{\hfill ... continued on next page} \\
+\endfoot
+\endlastfoot
 
 False
  & 
@@ -1385,7 +1404,21 @@ Header 2
 Header 3
 } \\
 \hline
+\endfirsthead
+\hline
+\textbf{
+Header row, column 1
+(header rows optional)
+} & \textbf{
+Header 2
+} & \textbf{
+Header 3
+} \\
+\hline
 \endhead
+\multicolumn{3}{c}{\hfill ... continued on next page} \\
+\endfoot
+\endlastfoot
 
 body row 1, column 1
  & 
